--- a/src/components/Main/Station/Station.module.css
+++ b/src/components/Main/Station/Station.module.css
@@ -3,13 +3,19 @@
   margin-bottom: 1rem;
 }
 
-.hide {
-  display: none;
-}
-
 .stationController {
+  overflow: hidden;
+  height: 0;
   display: flex;
   justify-content: space-between;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.open .stationController {
+  height: 11rem;
 }
 
 .container button {
